--- a/all/src/sass/layout/_content.scss
+++ b/all/src/sass/layout/_content.scss
@@ -75,7 +75,7 @@
 }
 
 .last-sportmenu {
-    margin-left: -10px;
+    margin-left: -5px;
     padding-left: 0 !important;
 }
 
@@ -133,6 +133,7 @@
 
 .sportmenu-plus {
     margin: 0 !important;
+    margin-left: auto !important;
 }
 
 .left-col-sportmenu {
@@ -241,5 +242,6 @@
 }
 
 .rekomendovano {
+    margin-top: 3px;
     font-size: 10px;
 }
