--- a/all/src/css/main.css
+++ b/all/src/css/main.css
@@ -136,7 +136,7 @@ body {
   margin-left: 10px; }
 
 .last-sportmenu {
-  margin-left: -10px;
+  margin-left: -5px;
   padding-left: 0 !important; }
 
 .salat-na-snidanok {
@@ -183,7 +183,8 @@ body {
   transition: all 500ms ease-out; }
 
 .sportmenu-plus {
-  margin: 0 !important; }
+  margin: 0 !important;
+  margin-left: auto !important; }
 
 .left-col-sportmenu {
   padding-left: 0 !important;
@@ -271,4 +272,5 @@ body {
   color: #8E8E8E; }
 
 .rekomendovano {
+  margin-top: 3px;
   font-size: 10px; }
