--- a/app/without sidebar/src/css/main.css
+++ b/app/without sidebar/src/css/main.css
@@ -162,6 +162,7 @@ body {
     font-size: 16px; }
 
 .salat-na-snidanok {
+  font-size: 18px;
   line-height: 20px;
   padding-top: 7px;
   font-weight: 800;
@@ -175,10 +176,8 @@ body {
   height: 103px; }
 
 .sportmenu-insider {
+  font-size: 8px;
   height: 180px; }
-
-.sportmenu-insider p {
-  font-size: 8px; }
 
 .sportmenu-stars {
   font-size: 14px;
@@ -307,6 +306,7 @@ body {
   z-index: 2; }
 
 .eggs {
-  margin-top: -18px;
+  margin-top: 0px;
+  margin-bottom: 10px;
   margin-right: -20px;
   font-size: 8px; }
