--- a/app/with sidebar/src/sass/layout/_content.scss
+++ b/app/with sidebar/src/sass/layout/_content.scss
@@ -80,6 +80,7 @@
 }
 
 .salat-na-snidanok {
+    font-size: 18px;
     line-height: 20px;
     font-weight: 800;
     padding-right: 0 !important;
@@ -97,11 +98,8 @@
 
 .sportmenu-insider {
     height: 180px;
+    font-size: 8px;
 }
-
- .sportmenu-insider p {
-     font-size: 8px;
- }
 
 .sportmenu-stars {
     font-size: 14px;
@@ -275,7 +273,8 @@
 }
 
 .eggs {
-    margin-top: -18px;
+    margin-top: 0px;
+    margin-bottom: 10px;
     margin-right: -20px;
     font-size: 8px;
 }
