--- a/app/with sidebar/src/css/main.css
+++ b/app/with sidebar/src/css/main.css
@@ -76,6 +76,26 @@ body {
 .main-content {
   margin-top: 20px; }
 
+.strilka-left {
+  margin-left: -15px; }
+
+.strilka-right {
+  margin-right: -15px; }
+
+.scale-allow {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-left: 5px; }
+
+#carouselExampleControls2 .carousel-inner {
+  margin-bottom: -35px !important; }
+
+.scale-allow-last {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-left: 5px;
+  margin-bottom: -60px; }
+
 .bigletters {
   text-transform: uppercase; }
 
@@ -129,7 +149,17 @@ body {
 
 .snidanok {
   margin-top: 35px;
-  margin-bottom: 25px;
+  margin-bottom: 0px;
+  font-size: 18px; }
+
+.obid {
+  margin-top: -5px;
+  margin-bottom: 0px;
+  font-size: 18px; }
+
+.vecherya {
+  margin-top: -5px;
+  margin-bottom: 0px;
   font-size: 18px; }
 
 .margin-sportmenu {
@@ -137,7 +167,8 @@ body {
 
 .last-sportmenu {
   margin-left: -5px;
-  padding-left: 0 !important; }
+  padding-left: 0 !important;
+  margin-right: 15px; }
 
 .salat-na-snidanok {
   font-size: 18px;
@@ -220,6 +251,7 @@ body {
   transition: all 500ms ease-out; }
 
 .sportmenu-images:hover {
+  position: relative;
   background-image: linear-gradient(white, white), url(../img/sportmenu.jpg);
   transform: scale(1.1);
   z-index: 2;
@@ -253,7 +285,7 @@ body {
 
 .register-button {
   border-radius: 20px !important;
-  margin-top: 300px !important;
+  margin-top: 290px !important;
   font-size: 10px !important;
   padding-left: -10px !important;
   padding-right: -10px !important; }
